# spacez_crew

./: .gitignore  Dockerfile  Makefile  README.md  api.py  pyproject.toml
galactiq/: .gitignore  README.md  pyproject.toml
galactiq/src/galactiq/: crew.py  main.py
galactiq/src/galactiq/config/: agents.yaml  tasks.yaml
galactiq/src/galactiq/tools/: gpt_tool.py  nasa_api_tool.py
src/galactiq/: crew.py  main.py
src/galactiq/config/: agents.yaml
src/galactiq/tools/: arxiv_tool.py  gpt_tool.py  nasa_api_tool.py  slack_tool.py
