[project]
name = "galactiq"
version = "0.1.0"
description = "galactIQ using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
    "fastapi>=0.115.8",
    "slack-sdk>=3.34.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
galactiq = "galactiq.main:run"
run_crew = "galactiq.main:run"
train = "galactiq.main:train"
replay = "galactiq.main:replay"
test = "galactiq.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
